# SorobanNameService

./: package.json
backend/: initialize.sh  package.json  test.sh
backend/.sns-dapp/: sns_registrar_id  sns_registry_id  sns_resolver_id
backend/contracts/sns-registrar/: Cargo.toml
backend/contracts/sns-registrar/src/: lib.rs  test.rs  testutils.rs
backend/contracts/sns-registry/: Cargo.toml
backend/contracts/sns-registry-interface/src/: lib.rs
backend/contracts/sns-registry/src/: lib.rs  test.rs
backend/contracts/sns-resolver/: Cargo.toml
backend/contracts/sns-resolver-interface/: Cargo.toml
backend/contracts/sns-resolver-interface/src/: lib.rs
backend/contracts/sns-resolver/src/: events.rs  lib.rs  test.rs
frontend/: package.json
frontend/hooks/: index.ts  useDomain.ts
frontend/src/@core/layouts/components/horizontal/navigation/: HorizontalNavLink.tsx
frontend/src/@core/theme/palette/: index.ts
frontend/src/configs/: themeConfig.ts
