[package]
name = "sns-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
sns-registry-interface = { path = "../sns-registry-interface", version = "0.1.0", package = "sns-registry-interface" }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sns-registry-interface = { path = "../sns-registry-interface", version = "0.1.0", package = "sns-registry-interface" }
