[package]
name = "sns-resolver"
version = "0.0.0"
edition = "2021"
publish = false
autobins = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
sns-resolver-interface = { path = "../sns-resolver-interface", version = "0.1.0", package = "sns-resolver-interface" }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sns-resolver-interface = { path = "../sns-resolver-interface", version = "0.1.0", package = "sns-resolver-interface" }
